@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>it.uniud.newbestsub</groupId>
     <artifactId>NewBestSub</artifactId>
-    <version>2.0.4</version>
+    <version>2.0.5</version>
     <url>https://github.com/Miccighel/NewBestSub</url>
 
     <organization>
@@ -133,6 +133,8 @@
 
         <!-- Fixed distribution tag for assembly artifact names -->
         <dist.version>2.0</dist.version>
+
+        <fastutil.version>8.5.14</fastutil.version>
     </properties>
 
     <profiles>
@@ -295,6 +297,13 @@
             <version>${yetus.audience.version}</version>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>it.unimi.dsi</groupId>
+            <artifactId>fastutil</artifactId>
+            <version>${fastutil.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -387,12 +396,16 @@
                     <execution>
                         <id>compile</id>
                         <phase>compile</phase>
-                        <goals><goal>compile</goal></goals>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
                     </execution>
                     <execution>
                         <id>test-compile</id>
                         <phase>test-compile</phase>
-                        <goals><goal>test-compile</goal></goals>
+                        <goals>
+                            <goal>test-compile</goal>
+                        </goals>
                     </execution>
                 </executions>
                 <configuration>
@@ -400,11 +413,32 @@
                 </configuration>
             </plugin>
 
-            <!-- Surefire 3.x (JUnit 5 support) -->
+            <!-- Surefire 3.x (JUnit 5 support) + Vector API module -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>--add-modules jdk.incubator.vector</argLine>
+                </configuration>
+            </plugin>
+
+            <!-- (Optional) Failsafe with the same module flag for ITs -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${maven.surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>--add-modules jdk.incubator.vector</argLine>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <!-- Dokka bound to verify so classes exist -->
@@ -416,7 +450,9 @@
                     <execution>
                         <id>dokka-site</id>
                         <phase>verify</phase>
-                        <goals><goal>dokka</goal></goals>
+                        <goals>
+                            <goal>dokka</goal>
+                        </goals>
                     </execution>
                 </executions>
                 <configuration>
